# LearningVerilog

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
Handbook/ch03/cli/: run.ts
Handbook/ch03/hdl/: select_action.sv  top.sv
Handbook/ch03/tb/: tb_emulator.sv  tb_select_action.sv
Handbook/ch03/xdc/: Nexys-A7-100T-Master.xdc
Handbook/ch04/: readme.md
Handbook/ch04/cli/: params.ts  run.ts
Handbook/ch04/hdl/: add_sub_mult.sv  bin_to_bcd.sv  clock_seg_display.sv  dec_cat_map.sv  seg_display.sv  seg_display_calc.sv  select_action.sv  select_btn_action.sv  top.sv  types_pkg.sv  unbounce_array.sv  unbounce_btn.sv
Handbook/ch04/tb/: tb_emulator.sv  tb_macos_only.sv  tb_seg_display.sv  tb_ubuntu_only.sv
Handbook/ch04/verilateTop/: Makefile  readme.md
Handbook/ch04/verilateWb/: Makefile
Handbook/ch04/verilateWb/src/: sim_main.cpp  sim_main_tb.cpp  sim_main_top.cpp
Handbook/ch05-car-in-line/cli/: params.ts
Handbook/ch05-car-in-line/hdl/: bin_to_bcd.sv  car_crossroad.sv  car_crossroad_displays.sv  car_lane.sv  car_len_display.sv  car_types_pkg.sv  dec_cat_map.sv  divider_nr.sv  edge_detect.sv  led_rgb.sv  rgb_test.sv  seg_display.sv  top.sv  types_pkg.sv
Handbook/ch05-car-in-line/ip_fake/: sys_pll.sv
Handbook/ch05-car-in-line/tb/: tb_emulator.sv
Handbook/ch05-car-in-line/xdc/: Nexys-A7-100T-Master.xdc
Handbook/ch05-scar-in-line/: readme.md
Handbook/ch05-simple-calc/: readme.md
Handbook/ch05-simple-calc/cli/: params.ts
Handbook/ch05-simple-calc/hdl/: divider_nr.sv  seg_display_calc.sv  select_btn_action.sv  top.sv  types_pkg.sv  unbounce_btn.sv
Handbook/ch05-simple-calc/ip/sys_pll/: sys_pll.xci
Handbook/ch05-simple-calc/tb/: tb_emulator.sv  tb_seg_display.sv  tb_unbounce_btn.sv
Handbook/ch05-simple-calc/verilateWb/: readme.md
Handbook/ch05-simple-calc/xdc/: Nexys-A7-100T-Master.xdc
Handbook/ch06-prj6-audio/: how to implement the rtaudio.md  readme.md
Handbook/ch06-prj7-temprature/: readme.md
NexysA7Emulator/: CMakeCogMain.py  CMakeLists.txt  README.md  main.cpp
NexysA7Emulator/Bal/: CMakeCog.py  CMakeLists.txt
NexysA7Emulator/Bal/HdlLib/: .gitignore  CMakeLists.txt  verilog_sources.cmake
NexysA7Emulator/Bal/HdlLib/hdl/: select_action.sv  types_pkg.sv
NexysA7Emulator/Bal/hpp/: EmulatorWorker.hpp  mytype.hpp
NexysA7Emulator/Bal/prptHpp/: MyTypePrivate.hpp  MyTypePrivate.py
NexysA7Emulator/Design/Core/: CoreSwitch.qml
NexysA7Emulator/Design/Design/: Constants.qml
NexysA7Emulator/Design/DesignContent/: App.qml  CMakeLists.txt  Screen01.qml  SevenSegmenDisplay.qml  SevenSegmentDigit.qml  SwItem.qml  qmldir
NexysA7Emulator/scripts/: Qt6AddQmlModule.py  runCog.sh
Youtube/ch03/: readme.md
Youtube/ch03/cli/: params.ts
Youtube/ch03/hdl/: example.sv
Youtube/ch03/tb/: tb_example.sv
Youtube/ch04/: file
bad.ch03/cli/: run_tb_xvlog.ts
bad.ch03/hdl/: top.sv
bad.ch03/tb/: tb_select_action.sv
ch03/cli/: run.ts  run_tb_count_ones.sh  run_tb_xvlog_sh.sh
ch03/hdl/: leading_ones.sv  select_action.sv  top.sv
ch03/tb/: tb_count_ones.sv
ch03/xdc/: Nexys-A7-100T-Master.xdc
cli/: run_tb.ts
hdl/: add_sub_mult.sv  count_ones.sv  leading_ones.sv  select_action.sv  top.sv  types_pkg.sv
icarus_gettings_started/cli/: params.ts  run.ts
icarus_gettings_started/hdl/: add_sub_mult.sv  hello.sv  my_package.sv  select_action.sv  types_pkg.sv
icarus_gettings_started/tb/: tb_select_action.sv
tb/: tb_add_sub_mult.sv  tb_count_ones.sv  tb_leading_ones.sv  tb_select_action.sv
